--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>DeliveryDriver</title>
+    <title>Delivery Driver by Darius Fang</title>
     <link rel="shortcut icon" href="WebBuild/TemplateData/favicon.ico" />
     <link rel="stylesheet" href="WebBuild/TemplateData/style.css" />
   </head>
